<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="24dp"
        tools:text="@string/question_australia" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            style="?android:buttonStyle"
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="#00AAFF"
            android:text="@string/option1" />


        <Button
            style="?android:buttonStyle"
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="#00AAFF"
            android:text="@string/option2" />

        <Button
            style="?android:buttonStyle"
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="#00AAFF"
            android:text="@string/option3" />

        <Button
            style="?android:buttonStyle"
            android:id="@+id/option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="#00AAFF"
            android:text="@string/option4" />



    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="75dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:id="@+id/help_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/help_button" />

        <Space
            android:layout_width="75dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/reset_button" />

    </LinearLayout>

</LinearLayout>